--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "jk-templates",
-  "version": "0.0.30",
-  "repository": "https://github.com/mynane/jk-templates",
+  "name": "local-workspace",
+  "version": "0.0.1",
+  "repository": "https://github.com/mynane/local-workspace",
   "author": "mynane <jikequan@163.com>",
   "license": "MIT",
   "main": "index.js",
-  "homepage": "https://github.com/mynane/jk-templates/blob/master/README.md",
+  "homepage": "https://github.com/mynane/local-workspace/blob/master/README.md",
   "bin": {
-    "jkt": "./index.js"
+    "lws": "./index.js"
   },
   "scripts": {
     "test": "eslint . --fix&&jest --passWithNoTests",
@@ -30,6 +30,7 @@
   "files": [
     "package.json",
     "readme.md",
+    "public",
     "dist",
     "index.js"
   ],
@@ -37,19 +38,29 @@
     "printWidth": 120
   },
   "dependencies": {
+    "@types/koa-route": "^3.2.4",
+    "@types/koa-router": "^7.4.2",
+    "@types/koa-static": "^4.0.1",
+    "@types/koa-websocket": "^5.0.5",
     "axios": "^0.21.1",
     "chalk": "^4.1.1",
     "commander": "^7.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "fs-extra": "^9.1.0",
+    "fs-extra": "^10.0.0",
     "inquirer": "^8.0.0",
     "inquirer-confirm": "^2.0.7",
+    "koa-route": "^3.2.0",
+    "koa-router": "^10.0.0",
+    "koa-static": "^5.0.0",
+    "koa-websocket": "^6.0.0",
+    "koa2": "^2.0.0-alpha.7",
     "latest-version": "^5.1.0",
     "moment": "^2.29.1",
     "open": "7.0.0",
     "ora": "^5.4.0",
     "tslib": "^2.1.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "pm2": "^5.1.0"
   }
 }
